Removed the cblas.h and fftw3.h stuff from helper.c since it isn't needed.  Modified the Makefile to be more 'universal'.

--- a/DRX/HDF5/Makefile
+++ b/DRX/HDF5/Makefile
@@ -1,10 +1,12 @@
-CFLAGS = $(shell python-config --includes) $(shell python -c "import numpy; print '-I' + numpy.__path__[0] + '/core/include/numpy/'")
+CFLAGS = $(shell python-config --cflags) $(shell python -c "import numpy; print '-I' + numpy.get_include()")
+
+LDFLAGS = $(shell python-config --ldflags)
 
 _helper.so: helper.o
-	gcc $(CFLAGS) -o _helper.so helper.o -lm -shared -fopenmp -lfftw3
+	$(CC) $(LDFLAGS) -o _helper.so helper.o -lm -shared -fopenmp
 	
 helper.o:
-	gcc -c $(CFLAGS) -fPIC -o helper.o helper.c -funroll-loops -O3 -fopenmp
+	$(CC) -c $(CFLAGS) -fPIC -o helper.o helper.c -funroll-loops -O3 -fopenmp
 	
 clean:
 	rm -rf helper.o _helper.so
