Changed the order of the linking flags in the HELPER Makefile.

--- a/DRX/HDF5/Makefile
+++ b/DRX/HDF5/Makefile
@@ -3,7 +3,7 @@ CFLAGS = $(shell python-config --cflags) $(shell python -c "import numpy; print 
 LDFLAGS = $(shell python-config --ldflags)
 
 _helper.so: helper.o
-	$(CC) $(LDFLAGS) -o _helper.so helper.o -lm -shared -fopenmp
+	$(CC) -o _helper.so helper.o $(LDFLAGS) -lm -shared -fopenmp
 	
 helper.o:
 	$(CC) -c $(CFLAGS) -fPIC -o helper.o helper.c -funroll-loops -O3 -fopenmp
