--- a/DRX/HDF5/Makefile
+++ b/DRX/HDF5/Makefile
@@ -5,7 +5,7 @@ LDFLAGS = $(shell python-config --ldflags)
 _helper.so: helper.o
 	$(CC) -o _helper.so helper.o $(LDFLAGS) -lm -shared -fopenmp
 	
-helper.o:
+helper.o: helper.c
 	$(CC) -c $(CFLAGS) -fPIC -o helper.o helper.c -funroll-loops -O3 -fopenmp
 	
 clean:
