Various changes and clean-ups to get everything working for LWA-SV.  This include a temporary 'multiStation.py' module for working with the LWA-SV SSMIF.

--- a/TBN/Calibration/Makefile
+++ b/TBN/Calibration/Makefile
@@ -4,3 +4,6 @@ finge.so: fringe.o
 fringe.o:
 	gcc -c fringe.c -o fringe.o -I/usr/include/python2.7 -I/usr/lib/python2.7/dist-packages/numpy/core/include -fopenmp -O3 -fPIC -shared
 
+clean:
+	rm -rf fringe.o fringe.so
+
