--- a/DRX/HDF5/Makefile
+++ b/DRX/HDF5/Makefile
@@ -3,10 +3,10 @@ CFLAGS = $(shell python-config --cflags) $(shell python -c "import numpy; print 
 LDFLAGS = $(shell python-config --ldflags)
 
 _helper.so: helper.o
-	$(CC) -o _helper.so helper.o $(LDFLAGS) -lm -shared -fopenmp
+	$(CC) -o _helper.so helper.o $(LDFLAGS) -lm -shared -fopenmp -march=native
 	
 helper.o: helper.c
-	$(CC) -c $(CFLAGS) -fPIC -o helper.o helper.c -funroll-loops -O3 -fopenmp
+	$(CC) -c $(CFLAGS) -fPIC -o helper.o helper.c -funroll-loops -O3 -fopenmp -march=native
 	
 clean:
 	rm -rf helper.o _helper.so
