--- a/DRX/HDF5/Makefile
+++ b/DRX/HDF5/Makefile
@@ -8,7 +8,7 @@ _helper.so: helper.o
 	$(CC) -o _helper.so helper.o $(LDFLAGS) -lm -shared -fopenmp -march=native
 	
 helper.o: helper.c
-	$(CC) -c $(CFLAGS) -fPIC -o helper.o helper.c -funroll-loops -O3 -fopenmp -march=native
+	$(CC) -c $(CFLAGS) -fPIC -o helper.o helper.c -fopenmp -march=native
 	
 clean:
 	rm -rf helper.o _helper.so
