Testing if the pylint stuff actually does anything.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ install:
         matplotlib \
         scipy \
         h5py
-    - pip install git+https://github.com/lwa-project/lsl.git
+    #- pip install git+https://github.com/lwa-project/lsl.git
+    - pip install lsl
     - pip install pylint
 
 script:
