--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,11 @@ addons:
             - libhdf5-dev
             - libatlas-base-dev
 
+before_install:
+    - sudo add-apt-repository -y ppa:deadsnakes/ppa
+    - sudo apt-get -q update
+    - sudo apt-get -y install python3.6 python3.6-dev
+
 install:
     - pip install \
         setuptools \
