--- a/DRX/HDF5/Makefile
+++ b/DRX/HDF5/Makefile
@@ -1,5 +1,5 @@
 CFLAGS = $(shell python-config --cflags) \
-         $(shell python -c "import numpy; print '-I' + numpy.get_include()") \
+         $(shell python -c "from __future__ import print_function; import numpy; print('-I' + numpy.get_include())") \
          -DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION
 
 LDFLAGS = $(shell python-config --ldflags)
