--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ addons:
 before_install:
     - sudo add-apt-repository -y ppa:deadsnakes/ppa
     - sudo apt-get -q update
-    - sudo apt-get -y install python3.6 python3.6-dev
+    - sudo apt-get -y install python3.6 python3.6-dev python3.8 python3.8-dev
 
 install:
     - pip install \
