Use a basic setup.py to help build the fringe and _helper extensions.

--- a/DRX/HDF5/Makefile
+++ b/DRX/HDF5/Makefile
@@ -1,14 +1,10 @@
-CFLAGS = $(shell python-config --cflags) \
-         $(shell python -c "from __future__ import print_function; import numpy; print('-I' + numpy.get_include())") \
-         -DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION
+.PHONY: all
+all: _helper.so
 
-LDFLAGS = $(shell python-config --ldflags)
-
-_helper.so: helper.o
-	$(CC) -o _helper.so helper.o $(LDFLAGS) -lm -shared -fopenmp -march=native
-	
-helper.o: helper.c
-	$(CC) -c $(CFLAGS) -fPIC -o helper.o helper.c -fopenmp -march=native
+_helper.so: helper.c setup.py
+	python setup.py build
+	mv build/lib*/*.so .
+	rm -rf build
 	
 clean:
-	rm -rf helper.o _helper.so
+	rm -rf _helper.so
