--- a/.github/workflows/commissioning.yml
+++ b/.github/workflows/commissioning.yml
@@ -18,9 +18,8 @@ jobs:
             python-version: ${{ matrix.python-version }}
         - uses: actions/checkout@v2
         - run: pip install setuptools numpy matplotlib scipy h5py 
-        - if: ${{ matrix.python-version == '2.7' }}
-          run: pip install "healpy<1.14.0"
         - run: pip install git+https://github.com/lwa-project/lsl.git
         - run: pip install pylint
         - run: cd TBN/Calibration && make
+        - continue-on-error: ${{ matrix.python-version == '2.7' }}
         - run: cd tests && python -m unittest discover
