--- a/.github/workflows/commissioning.yml
+++ b/.github/workflows/commissioning.yml
@@ -22,4 +22,4 @@ jobs:
         - run: pip install pylint
         - run: cd TBN/Calibration && make
         - continue-on-error: ${{ matrix.python-version == '2.7' }}
-        - run: cd tests && python -m unittest discover
+          run: cd tests && python -m unittest discover
