--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,10 @@ jobs:
         - run: pip install setuptools numpy matplotlib scipy h5py 
         - run: pip install git+https://github.com/lwa-project/lsl.git
         - run: pip install pylint
-        - run: cd TBN/Calibration && make
+        - run: |
+            cd TBN/Calibration
+            make
         - continue-on-error: ${{ matrix.python-version == '2.7' }}
-          run: cd tests && python -m unittest discover
+          run: |
+            cd tests
+            python -m unittest discover
