--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Commissioning
+name: Test
 on: [push, pull_request]
 jobs:
   build:
@@ -9,7 +9,8 @@ jobs:
         python-version: ['2.7', '3.6', '3.8']
       fail-fast: false
     steps:
-        - if: ${{ matrix.os == 'ubuntu-latest' }}
+        - name: "Software Install - Ubuntu"
+          if: ${{ matrix.os == 'ubuntu-latest' }}
           run: |
             sudo apt-get install -y \
               build-essential \
@@ -21,7 +22,8 @@ jobs:
               libhdf5-dev \
               libgdbm-dev \
               pkg-config
-        - if: ${{ matrix.os == 'macos-latest' }}
+        - name: "Software Install - MacOS"
+          if: ${{ matrix.os == 'macos-latest' }}
           run: |
             brew install \
               fftw \
@@ -31,13 +33,24 @@ jobs:
           with:
             python-version: ${{ matrix.python-version }}
         - uses: actions/checkout@v2
-        - run: pip install setuptools numpy matplotlib scipy h5py 
-        - run: pip install git+https://github.com/lwa-project/lsl.git
-        - run: pip install pylint
-        - run: |
+        - name: "Software Install - Python"
+          run: |
+            pip install \
+              setuptools \
+              numpy \
+              matplotlib \
+              scipy \
+              h5py
+            pip install \
+              git+https://github.com/lwa-project/lsl.git
+            pip install \
+             pylint
+        - name: Build
+          run: |
             cd TBN/Calibration
             make
-        - continue-on-error: ${{ matrix.python-version == '2.7' }}
+        - name: Test
+          continue-on-error: ${{ matrix.python-version == '2.7' }}
           run: |
             cd tests
             python -m unittest discover
