--- a/TBN/Calibration/Makefile
+++ b/TBN/Calibration/Makefile
@@ -1,10 +1,12 @@
+PYTHON ?= python
+
 .PHONY: all
 all: fringe.so
 
 fringe.so: fringe.c setup.py
-	python setup.py build
+	$(PYTHON) setup.py build
 	mv build/lib*/*.so .
 	rm -rf build
 	
 clean:
-	rm -rf fringe.so
+	rm -rf fringe.*so fringe.*dylib
