--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,16 +39,12 @@ jobs:
         - uses: actions/checkout@v2
         - name: "Software Install - Python"
           run: |
+            pip install numpy
+            pip install -r requirements.txt
+        - name: "Software Install - Python, Part 2"
+          run: |
             pip install \
-              setuptools \
-              numpy \
-              matplotlib \
-              scipy \
-              h5py
-            pip install \
-              git+https://github.com/lwa-project/lsl.git
-            pip install \
-             pylint
+              pylint
         - name: Build
           run: |
             cd TBN/Calibration
