--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,7 @@ jobs:
           run: |
             pip install numpy
             pip install -r requirements.txt
-        - name: "Software Install - Python, Part 2"
-          run: |
-            pip install \
-              pylint
+            pip install pylint
         - name: Build
           run: |
             cd TBN/Calibration
