--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ matplotlib
 scipy
 h5py
 lsl
-wxpython
+wxpython <= 4.1.1
 healpy < 1.14.0; python_version <= '2.7'
 bottleneck; python_version > '2.7'
