--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       fail-fast: false
     steps:
         - name: "Software Install - Ubuntu"
-          if: ${{ matrix.os == 'ubuntu-latst' || matrix.os == 'ubuntu-20.04' }}
+          if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'ubuntu-20.04' }}
           run: |
             sudo apt-get install -y \
               build-essential \
