--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ h5py
 lsl
 wxpython <= 4.1.1
 importlib-metadata; python_version < '3.8'
-healpy < 1.14.0; python_version <= '2.7'
+healpy < 1.14.0
 bottleneck; python_version > '2.7'
