--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         - name: "Software Install - Ubuntu"
           if: ${{ matrix.os == 'ubuntu-latest' }}
           run: |
+            sudo apt-get update -q
             sudo apt-get install -y \
               build-essential \
               ca-certificates \
