Also install bs4 to make pylint happy.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           run: |
             pip install numpy
             pip install -r requirements.txt
-            pip install pylint
+            pip install bs4 pylint
         - name: Build
           run: |
             cd TBN/Calibration
